--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
                 </div>
             </div>
         </div>
+        <p>skrypty wprowadzenie</p>
+        <script src="wprowadzenie.js"></script>
+
     </body>
 </html>
