--- a/jaka_to_liczba.html
+++ b/jaka_to_liczba.html
@@ -25,5 +25,7 @@
                 </div>
             </div>
         </div>
+        <p>skrypty Pętle</p>
+        <script src="petle.js"></script>
     </body>
 </html>
