--- a/opis.html
+++ b/opis.html
@@ -25,5 +25,11 @@
                 </div>
             </div>
         </div>
+        
+        <p>skrypty "Wstrzykiwanie" kodu HTML do wybranego elementu</p>
+        <div id="wynik1"></div>
+        <div id="wynik2"></div>
+        <div id="wynik3"></div>
+        <script src="wstrzykiwanie.js"></script>
     </body>
 </html>
