--- a/jaka_to_liczba.html
+++ b/jaka_to_liczba.html
@@ -26,6 +26,9 @@
             </div>
         </div>
         <p>skrypty Pętle</p>
+        <div id="zad1"></div>
+        <div id="zad2"></div>
+
         <script src="petle.js"></script>
     </body>
 </html>
