--- a/Liczby_calkowite_z_zakresu.html
+++ b/Liczby_calkowite_z_zakresu.html
@@ -25,5 +25,12 @@
                 </div>
             </div>
         </div>
+        <p>skrypty warunkowe</p>
+        <div id="opis1"></div>
+        <div id="opis2"></div>
+        <div id="opis3"></div>
+        <div id="opisoceny"></div>
+        <div id="yes"></div>
+        <script src="warunkowe.js"></script>
     </body>
 </html>
